...
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/tp_title_text_color"
            android:text="Download Quality"
            />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loadingProgress"
        android:layout_width="wrap_content"
...
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:layout_weight="2">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancel_download"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:text="Cancel"
...
