<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <Button
        android:id="@+id/bottom_sheet_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bottom Sheet" />
</FrameLayout>
